--- a/cocoin/test-output/old/Default suite/classes.html
+++ b/cocoin/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.cocoin.testcases.TC004_VerifyAddedExpense</td>
+<td>com.cocoin.testcases.TC003_AddExpense</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
